# Tuzzi-OpenGL-ES-3.0-Tutorials

./: .gitignore  CMakeLists.txt  README.md  gen_build_ios.sh  gen_build_mac.sh
Android/: build.gradle  settings.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: jni.cpp
Android/app/src/main/res/values/: strings.xml
Android/gradle/wrapper/: gradle-wrapper.properties
Assets/Earth/: Image09760D80_09760D30.tga  Image097C9000_097C8FB0.tga  Image097CB100_097CB0B0.tga  Image097CD200_097CD1B0.tga  Image097D1400_097D13B0.tga  earth.mtl
Common/: AppDelegate.h  AppDelegate.m  FileWrapper.h  FileWrapper.m  GLApplication.cpp  GLApplication.h  GLApplication.hpp  Mesh.h  Model.h  Shader.h  Util.c  Util.h  main.m
Tutorial01_Triangle/Triangle/: TriangleApplication.cpp  TriangleApplication.hpp  ViewController.h  ViewController.mm  shader.fsh  shader.vsh
Tutorial01_Triangle/Triangle.xcodeproj/: project.pbxproj
Tutorial01_Triangle/Triangle.xcodeproj/project.xcworkspace/xcuserdata/baidu.xcuserdatad/: UserInterfaceState.xcuserstate
Tutorial01_Triangle/Triangle.xcodeproj/xcuserdata/baidu.xcuserdatad/xcschemes/: Triangle.xcscheme  xcschememanagement.plist
Tutorial02_Cube/Cube/: CubeApplication.cpp  CubeApplication.h  CubeApplication.hpp  Info.plist  ViewController.mm  shader.vsh
Tutorial02_Cube/Cube.xcodeproj/: project.pbxproj
Tutorial02_Cube/Cube.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tutorial02_Cube/Cube.xcodeproj/project.xcworkspace/xcuserdata/baidu.xcuserdatad/: UserInterfaceState.xcuserstate
Tutorial02_Cube/Cube.xcodeproj/xcuserdata/baidu.xcuserdatad/xcschemes/: Cube.xcscheme  xcschememanagement.plist
Tutorial03_CubeVBO/CubeVBO/: CubeVBOApplication.cpp  CubeVBOApplication.h  CubeVBOApplication.hpp  ViewController.h  ViewController.mm  shader.fsh
Tutorial03_CubeVBO/CubeVBO.xcodeproj/: project.pbxproj
Tutorial03_CubeVBO/CubeVBO.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tutorial03_CubeVBO/CubeVBO.xcodeproj/project.xcworkspace/xcuserdata/baidu.xcuserdatad/: UserInterfaceState.xcuserstate
Tutorial04_CubeVAO/CubeVAO/: CubeVAOApplication.cpp  CubeVAOApplication.h  CubeVAOApplication.hpp  ViewController.mm
Tutorial04_CubeVAO/CubeVAO.xcodeproj/: project.pbxproj
Tutorial04_CubeVAO/CubeVAO.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tutorial05_CubeWithTexture/CubeWithTexture/: CubeWithTextureApplication.cpp  CubeWithTextureApplication.h  CubeWithTextureApplication.hpp  ViewController.mm  shader.fsh  shader.vsh
Tutorial05_CubeWithTexture/CubeWithTexture.xcodeproj/: project.pbxproj
Tutorial05_CubeWithTexture/CubeWithTexture.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tutorial05_CubeWithTexture/CubeWithTexture/Base.lproj/: Main.storyboard
Tutorial06_AmbientLight/AmbientLight/: AmbientLightApplication.cpp  AmbientLightApplication.h  AmbientLightApplication.hpp  ViewController.h  ViewController.mm  shader.fsh
Tutorial06_AmbientLight/AmbientLight.xcodeproj/: project.pbxproj
Tutorial06_AmbientLight/AmbientLight.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tutorial06_AmbientLight/AmbientLight/Base.lproj/: Main.storyboard
Tutorial07_DiffuseReflection/DiffuseReflection/: DiffuseReflectionApplication.cpp  DiffuseReflectionApplication.h  DiffuseReflectionApplication.hpp  ViewController.h  ViewController.mm  box.tga  shader.fsh  shader.vsh
Tutorial07_DiffuseReflection/DiffuseReflection.xcodeproj/: project.pbxproj
Tutorial07_DiffuseReflection/DiffuseReflection.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tutorial07_DiffuseReflection/DiffuseReflection/Base.lproj/: Main.storyboard
Tutorial10_ModelLoader/ModelLoader/: LoadModelApplication.cpp  LoadModelApplication.h  ViewController.h  ViewController.mm  shader.fsh  shader.vsh
Tutorial10_ModelLoader/ModelLoader.xcodeproj/: project.pbxproj
Tutorial10_ModelLoader/ModelLoader.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tutorial_01/: DemoApplication.cpp  DemoApplication.h  README.md
Tutorial_02/: ColorApplication.cpp  ColorApplication.h  README.md
Tutorial_03/: TextureApplication.cpp  TextureApplication.h
Tutorial_04/: LightApplication.cpp  LightApplication.h
Windows/: main.cpp
iOS/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.mm  main.m
iOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
iOS/TuzziApp.xcodeproj/: project.pbxproj
iOS/TuzziApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/TuzziApp.xcodeproj/xcshareddata/xcschemes/: TuzziApp.xcscheme
iOS/TuzziTutorials.xcworkspace/: contents.xcworkspacedata
macOS/: AppDelegate.h  AppDelegate.mm  Info.plist  ViewController.h  ViewController.mm  main.m
macOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
macOS/TuzziApp.xcodeproj/: project.pbxproj
macOS/TuzziApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
macOS/TuzziApp.xcodeproj/xcshareddata/xcschemes/: TutorialApp.xcscheme
macOS/TuzziTutorials.xcworkspace/: contents.xcworkspacedata
res/shader/: texture.frag  texture.vert
tuzzi/: CMakeLists.txt
tuzzi/src/: Application.cpp  Application.h  Common.h  Log.cpp  Log.h  Object.cpp  Object.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SharedPtr.h  TextureManager.cpp  TextureManager.h  Tuzzi.cpp  Tuzzi.h
tuzzi/src/android/: TuzziAndroid.cpp  TuzziAndroid.h
tuzzi/src/container/: Map.cpp  Map.h  Vector.cpp  Vector.h
tuzzi/src/gl/: gl.h
tuzzi/src/graphics/: Color.cpp  Color.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.h  Texture.cpp  Texture.h
tuzzi/src/image/: Image.cpp  Image.h
tuzzi/src/io/: File.cpp  File.h
tuzzi/src/ios/: TuzziiOS.h  TuzziiOS.mm
tuzzi/src/mac/: TuzziMac.h  TuzziMac.mm
tuzzi/src/math/: Color.cpp  Color.h  Math.cpp  Math.h  Matrix4x4f.cpp  Matrix4x4f.h  Quaternionf.cpp  Quaternionf.h  Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h
tuzzi/src/memory/: ByteBuffer.cpp  ByteBuffer.h
tuzzi/src/string/: String.cpp  String.h
(+23 files in other folders)
